// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaModel patches getJsonPatches returns plain JSON patches 1`] = `
[
  {
    "op": "add",
    "path": "/properties/field",
    "value": {
      "default": "",
      "type": "string",
    },
  },
]
`;

exports[`SchemaModel patches getPatches handles type change on newly created field (not yet saved) 1`] = `
[
  {
    "fieldName": "newField",
    "patch": {
      "op": "add",
      "path": "/properties/newField",
      "value": {
        "additionalProperties": false,
        "properties": {},
        "required": [],
        "type": "object",
      },
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel patches getPatches handles type change on newly created field to array (not yet saved) 1`] = `
[
  {
    "fieldName": "newField",
    "patch": {
      "op": "add",
      "path": "/properties/newField",
      "value": {
        "items": {
          "default": "",
          "type": "string",
        },
        "type": "array",
      },
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel patches getPatches includes formula change info 1`] = `
[
  {
    "fieldName": "age",
    "patch": {
      "op": "replace",
      "path": "/properties/age",
      "value": {
        "default": 0,
        "readOnly": true,
        "type": "number",
        "x-formula": {
          "expression": "name",
          "version": 1,
        },
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "formula",
        "to": "name",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`SchemaModel patches getPatches multiple field additions 1`] = `
[
  {
    "fieldName": "field1",
    "patch": {
      "op": "add",
      "path": "/properties/field1",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": "",
      },
    ],
  },
  {
    "fieldName": "field2",
    "patch": {
      "op": "add",
      "path": "/properties/field2",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": 0,
      },
    ],
  },
  {
    "fieldName": "field3",
    "patch": {
      "op": "add",
      "path": "/properties/field3",
      "value": {
        "default": false,
        "type": "boolean",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": false,
      },
    ],
  },
]
`;

exports[`SchemaModel patches getPatches returns add patch for new field 1`] = `
[
  {
    "fieldName": "newField",
    "patch": {
      "op": "add",
      "path": "/properties/newField",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": "",
      },
    ],
  },
]
`;

exports[`SchemaModel patches getPatches returns empty array when no changes 1`] = `[]`;

exports[`SchemaModel patches getPatches returns move patch for renamed field 1`] = `
[
  {
    "fieldName": "fullName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/name",
      "op": "move",
      "path": "/properties/fullName",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel patches getPatches returns remove patch for deleted field 1`] = `
[
  {
    "fieldName": "name",
    "patch": {
      "op": "remove",
      "path": "/properties/name",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel patches getPatches returns replace patch for default value change 1`] = `
[
  {
    "fieldName": "name",
    "patch": {
      "op": "replace",
      "path": "/properties/name",
      "value": {
        "default": "changed",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "",
        "property": "default",
        "to": "changed",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`SchemaModel patches getPatches returns replace patch for type change 1`] = `
[
  {
    "fieldName": "name",
    "patch": {
      "op": "replace",
      "path": "/properties/name",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": "",
        "property": "default",
        "to": 0,
      },
    ],
    "typeChange": {
      "fromType": "string",
      "toType": "number",
    },
  },
]
`;

exports[`SchemaModel patches patches with refSchemas adding and removing regular field works with refSchemas option 1`] = `[]`;
